Fixed icon spacing in sidebar

--- a/frontend/src/app/components/app-sidebar/app-sidebar.scss
+++ b/frontend/src/app/components/app-sidebar/app-sidebar.scss
@@ -96,8 +96,8 @@ app-sidebar
         margin-bottom: -20rem;
 
         // Apply vertical padding to compensate for the negative margin.
-        padding-top: 20rem;
-        padding-bottom: 20rem;
+        padding-top: 22.5rem;
+        padding-bottom: 22.5rem;
 
         // Shrink to allow scrolling.
         flex-shrink: 1;
